# gyrodrone

./: .gitignore  LICENSE  README.md
SourceCode/Src/: .MPU6050.c.swp  MPU6050.c
SourceCode/inc/: MPU6050.h  main.h
mpu6050_i2c/: CMakeLists.txt  kalman.c  kalman.h  main.c  mpu6050_i2c.c  mpu6050_i2c.h
mpu6050_i2c/utils/wifi/: wifi.c
source_code/: CMakeLists.txt  main.c
source_code/utils/esc/: esc.c  esc.h
source_code/utils/wifi/: lwipopts.h  wifi.h
udp_beacon/: picow_udp_beacon.c
